tls2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taxisbahia
  labels:
    type: endpoints-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taxisbahia
  template:
    metadata:
      labels:
        app: taxisbahia
    spec:
      containers:
      - name: taxisbahia
        image: gcr.io/innate-beacon-797/taxisbahia:1.0.131
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: taxisbahia
  labels:
    type: esp-srv
spec:
  type: LoadBalancer
  loadBalancerIP: 35.239.238.163
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: taxisbahia

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: esp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    type: endpoints-app
spec:
  tls:
    - hosts:
        - taxisbahia.cl
      secretName: esp-tls
  rules:
    - host: taxisbahia.cl
      http:
        paths:
          - backend:
              serviceName: taxisbahia
              servicePort: 80
