tls2/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: esp-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: 35.239.238.163
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
  labels:
    type: endpoints-app
spec:
  tls:
  - hosts:
    - www.taxisbahia.cl
    secretName: esp-tls
  backend:
      serviceName: taxisbahia
      servicePort: 8080
